# virtmanager

./: .pre-commit-config.yaml  Dockerfile  README.md  config.py  main.py  megalinter.yml  prepare_db.py  pyproject.toml  requirements.txt
.VSCodeCounter/2024-10-11_01-03-50/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2024-10-11_12-59-19/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.github/workflows/: blank.yml  virtmanager.yml
src/: auth.py  bus.py  config.py  enums.py  exceptions.py  machine.py  utils.py
src/abstract/: __init__.py  chain.py  client_factory.py  singletone.py
src/cli/: __init__.py  auth.py  base.py  cli.py  connection.py  show.py
src/cli/root/: __init__.py  create.py  delete.py  permission.py  root.py  show.py
src/database/: __init__.py  base.py  database.py  manager.py  monitor.py
src/database/analysis_queries/: get_all_hard_drives.sql  get_all_machines.sql  get_all_machines_user_admin.sql  get_all_machines_user_allowed.sql  get_all_machines_with_characteristics.sql  get_all_machines_with_components.sql  get_all_memories.sql  get_all_processors.sql  get_all_users.sql  get_allowed_machines.sql  get_enable_machines.sql  get_enabled_machines.sql  get_machine_by_allias.sql  get_machine_by_ip.sql
src/database/crud_queries/: connect_to_machine.sql  create_db.sql  create_machine.sql  create_user.sql  delete_machine.sql  disconnect_from_machine.sql  get_user_by_username.sql  grant_user_access.sql  revoke_user_access.sql  seed.sql
src/database/queries/: add_user.sql  create_db.sql  create_machine.sql  create_new_machine.sql
src/exceptions/: __init__.py  auth.py  database.py
src/machine/: __init__.py  creator.py  product.py
src/schemas/: __init__.py  machine.py  user.py
tests/: conftest.py
tests/unit/: test_auth.py
