[tool.poetry]
name = "virtmanager"
version = "0.1.0"
description = ""
authors = ["romanov9617 <romanov9617@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asyncio = "^3.4.3"
asyncpg = "^0.29.0"
click = "^8.1.7"
ruff = "^0.6.9"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
py-bcrypt = "^0.4"
pydantic-settings = "^2.5.2"
aiofiles = "^24.1.0"
mypy = "^1.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
src = ["virtmanager"]
target-version = "py38"
exclude = ["tests"]

[tool.ruff.lint]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
    "COM812",  # missing-trailing-comma
    "ISC001",  # single-line-implicit-string-concatenation
]
select = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"
