[tool.poetry]
name = "virtmanager"
version = "0.1.0"
description = ""
authors = ["romanov9617 <romanov9617@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asyncio = "^3.4.3"
asyncpg = "^0.29.0"
click = "^8.1.7"
ruff = "^0.6.9"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pydantic-settings = "^2.5.2"
aiofiles = "^24.1.0"
mypy = "^1.11.2"
pytest-asyncio = "^0.24.0"
logger = "^1.4"
pydantic = "^2.9.2"
sqlfluff = "^3.2.2"
uvicorn = "^0.31.1"
idna = "^3.10"
prettytable = "^3.11.0"
bcrypt = "^4.2.0"
py-bcrypt = "^0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
python_version = "3.12"
disable_error_code = "import-untyped"
warn_unused_configs = true
ignore_errors = true  # TODO: remove this. DEADLINE TIC-TAC


[tool.ruff]
src = ["virtmanager"]
target-version = "py38"
exclude = ["tests"]

[tool.ruff.lint]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
    "COM812",  # missing-trailing-comma
    "ISC001",  # single-line-implicit-string-concatenation
    "T201",    # print
]
select = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
addopts = "-vvs --cov=. --cov-report=term-missing --cov-report=html"
testpaths = [
    "tests",
]
pythonpath = [
    ".",
]
asyncio_mode = "auto"
